# Japanese-Tools

./: .clineignore  .continueignore  .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Cargo.toml  README  README.md  README.org  build.sh  install_mueval.sh
.circleci/: config.yml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
ai/: .env.example  .gitignore  Cargo.toml  ai.sh  api-keys.example  config.toml.example
ai/src/: compilerx.rs  constants.rs  gettext.rs  main.rs  memory.rs  model.rs  plan.md  prompt.rs  unicodebytelimit.rs  weather.rs
ai/src/memory/: user_groups.rs
ai/src/memory/user_groups/: tests.rs
ai/tests/: integration_test.rs
audio/: find_audio.sh
bablefish/: bf.sh
cdecl/: c++.sh  c.sh  cdecl.sh
compare_encoding/: compare_encoding.sh
gettext/: extract_strings.sh  gettext.sh  japanese_tools.pot  regenerate_mo_files.sh
gettext/po/: de.po  pl.po
google_count/: google_count.sh
google_dictionary/: gd  gd.py  gd.sh
google_translate/: gt  gt.sh
ircbot/: .gitignore  Cargo.toml
ircbot/src/: bot.rs  error.rs  main.rs
jmdict/: .gitignore  ja  ja.sh  ja2.sh  jm.sh  prepare_jmdict  prepare_jmdict.sh  prepare_jmdict.xslt  prepare_wadoku.sh  prepare_wadoku.xslt  wa.sh
kana/: .gitignore  hira  hira.sh  hiragana.txt  kana  kana.sh  kata  kata.sh  katakana.txt
kanjidic/: .gitignore  kanjidic.sh  prepare_kanjidic.sh
kumitate_quiz/: .gitignore  kuiz.sh
lhc/: lhc_info.sh
mueval/: eval.sh  mueval_patch_for_proper_type_check  run.sh  type.sh
reading/: read.py
reading_quiz/: .gitignore  create_vocab_list  create_vocab_list.sh  lookup_one_line.sh  quiz  quiz.sh
romaji/: romaji  romaji.sh
rtk/: .gitignore  rtk  rtk.sh  rtk.txt
simple_bot/: .gitignore  bot.py
tadoku/: tadoku.sh
tokenizer/: .gitignore  Cargo.toml
yahoo_jisho/: daijirin  daijirin.sh  daijisen  daijisen.sh  daijisen_wa.sh  pitch.sh  yj  yj.sh
(+2 files in other folders)
