[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
formatx = "0.2.4"
gettext-rs = "0.7.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
rusqlite = { version = "0.37.0", features = ["time"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
time = "0.3.41"

[dev-dependencies]
tempfile = "3.20.0"
