[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
formatx = "0.2.4"
gettext-rs = "0.7.2"
nom = "8.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
rusqlite = { version = "0.37.0", features = ["time"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
time = "0.3.41"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.20.0"
mockito = "1.4.0"
