[package]
name = "ai"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
formatx = "0.2.4"
gettext-rs = "0.7.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.37.0", features = ["time", "bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
time = "0.3.41"
toml = "0.9.5"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.4.0"
proptest = "1.4.0"
tempfile = "3.20.0"
