[package]
name = "ircbot"
version = "0.1.0"
edition = "2024"
authors = ["Christoph Dittmann <github@yozora.eu>"]

[dependencies]
irc = "1.1.0"
clap = { version = "4.5.43", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["signal"] }
rand = "0.9.2"
gettext-rs = "0.7.2"
chrono = "0.4.41"
